# moex-screener

./: .gitignore  LICENSE  README.md  pyproject.toml  report.html
data/fixtures/: marketdata_missing_securities.json  securities_corrupted.json  securities_empty.json  securities_invalid_types.json  securities_missing_columns.json  securities_missing_marketdata.json  securities_valid.json
src/: main.py
src/api/: client.py
src/core/: config.py  logger_config.py
src/views/: main_window.py
tests/: conftest.py  test_api.py
