[tool.poetry]
name = "moex-screener"
version = "0.1.0"
description = "Desktop stock screener for MOEX shares using PySide6, pandas, and MOEX ISS API."
authors = ["Baika <bajmurat.zaanbaev@gmail.com>"]
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
PySide6 = ">=6.6.0,<7.0.0"
pandas = ">=2.2.0,<4.0.0"
httpx = ">=0.27.0,<0.29.0"
openpyxl = ">=3.1.5,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<10.0.0"
pytest-qt = ">=4.4.0,<5.0.0"
ruff = ">=0.9.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [".venv", "venv", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"